--- a/src/example/index.html
+++ b/src/example/index.html
@@ -38,7 +38,8 @@
     $(document)
         .ready(function() {
             usng_map.create({
-                mapID: "map"
+                mapID: "map",
+                debug: true
             });
         });
     </script>
