Added label color option, fixed broken names in sidebar

--- a/README.html
+++ b/README.html
@@ -437,7 +437,7 @@
 </head>
 
 <body>
-    <h1 id="usng-web-map">USNG Web Map</h1>
+    <h1 id="usng-web-map-v1-0-0">USNG Web Map v1.0.0</h1>
 <h3 id="installation">Installation</h3>
 <hr>
 <ul>
